<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UniTax</string>
    <string name="first_screen_text1">UNI</string>
    <string name="first_screen_text2">TAX</string>
    <string name="Tutoria_token">TUTORIAL: POTREMMO FARLO SLIDING WINDOW CON SCREENSHOT DELLE SCHERMATE</string>
    <string name="app_logo">this is the logo of the app</string>

    <!--Stringhe activity_select-uni.xml-->
    <string name="select_uni"> Seleziona la tua università</string>
    <string name="spinner">[Seleziona un università...]</string>
    <string name="invia_uni_selezionata">invia uni selezionata</string>
    <string name="ok">Ok</string>

    <!--Stringhe activity_info_uni.xml -->
    <string name="nome_universit">Nome università</string>
    <string name="informazioni_universit">Informazioni università</string>
    <string name="insert_tax">Inserisci il valore delle tue tasse universitarie</string>
    <string name="insert_tax_desc">Inserisci il valore delle tue tasse universitarie</string>
    <string name="btn_tax">Guarda come vengono utilizzate</string>
    <string name="btn_tax_desc">Info su come vengono utilizzate le tasse</string>
    <string name="btn_tax_scon">Non sai quanto spendi?</string>
    <string name="btn_tax_scon_desc">Link calcolo tasse</string>
    <string name="costi_totali">Costi Totali</string>
    <string name="proventi_totali">Proventi Totali</string>

    <!-- Stringhe CalcoloTasseActivity -->
    <string name="tipologiacorso">Tipologia corso di studio</string>
    <string name="insert_isee">Inserisci il tuo ISEE:</string>
    <string name="citt">Cittadinanza</string>
    <string name="annofreq">Anno di iscrizione</string>
    <string name="mer">Merito:</string>
    <string name="calISEE">Calcola ISEE</string>
    <string name="info">Info tasse</string>




    <!--Stringhe per un altra activity-->
    <string name="inserisci_valore_isee">Inserisci valore ISEE</string>
    <string name="calcola_tasse">calcola tasse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
