<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tommik.unitax.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/universita_ca_foscari"
        android:id="@+id/imageView2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:text="@string/first_screen_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="@color/uniTaxPrimary"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:layout_above="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp" />

    <TextView
        android:text="@string/first_screen_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="@color/uniTaxPrimary"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:layout_marginTop="26dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
